--- a/default.toml
+++ b/default.toml
@@ -2,4 +2,4 @@
 # See the docs at https://www.habitat.sh/docs/create-packages-configure/.
 # You can safely delete this file if you don't need it.
 
-lagniappe = "lagniappe"
+lagniappe = "lagniappe (default.toml)"
